Consolidate Tone H1-6 button handling

--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -2024,7 +2024,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="H1_increment_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2057,7 +2057,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="H1_decrement_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2090,7 +2090,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="H2_increment_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2123,7 +2123,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="H2_decrement_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2158,7 +2158,7 @@
                                         Margin="2,0,0,0"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="H3_increment_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2191,7 +2191,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="H3_decrement_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2225,7 +2225,7 @@
                                         Margin="2,10,0,0"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="H4_increment_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2258,7 +2258,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="H4_decrement_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2292,7 +2292,7 @@
                                         Margin="2,10,0,0"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="H5_increment_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2325,7 +2325,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="H5_decrement_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2359,7 +2359,7 @@
                                         Margin="2,10,0,0"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="H6_increment_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2392,7 +2392,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="H6_decrement_Click"
+                                        Click="H_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
