consolidate EQ button handling

--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -1346,7 +1346,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="EQ0_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1379,7 +1379,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="EQ0_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1411,7 +1411,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ1_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1444,7 +1444,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ1_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1476,7 +1476,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="EQ2_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1509,7 +1509,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="EQ2_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1541,7 +1541,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ3_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1574,7 +1574,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ3_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1606,7 +1606,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="EQ4_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1639,7 +1639,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="EQ4_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1671,7 +1671,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ5_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1704,7 +1704,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ5_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1736,7 +1736,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="EQ6_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1769,7 +1769,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
-                                        Click="EQ6_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1801,7 +1801,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ7_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1834,7 +1834,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
-                                        Click="EQ7_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -1866,7 +1866,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="EQ8_increment_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -1899,7 +1899,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
-                                        Click="EQ8_decrement_Click"
+                                        Click="EQ_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
