--- a/Themes/BlueLightTheme.xaml
+++ b/Themes/BlueLightTheme.xaml
@@ -1,9 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#119EDA" />
-    <SolidColorBrush x:Key="Mid" Color="#1585B5" />
-    <SolidColorBrush x:Key="Dark" Color="#1D556D" />
+
+    <SolidColorBrush x:Key="Light" Color="#449dc4" />
+    <SolidColorBrush x:Key="LightMouse" Color="#1585b5" />
+
+    <SolidColorBrush x:Key="Mid" Color="#1585b5" />
+    <SolidColorBrush x:Key="MidMouse" Color="#116a91" />
+
+    <SolidColorBrush x:Key="Dark" Color="#0f5d7f" />
+    <SolidColorBrush x:Key="DarkMouse" Color="#0b435b" />
+
     <SolidColorBrush x:Key="Foreground" Color="Black" />
     <SolidColorBrush x:Key="Background" Color="White" />
-    <SolidColorBrush x:Key="Slider" Color="#1585B5" />
-    <SolidColorBrush x:Key="Tab" Color="White" />
+
+    <SolidColorBrush x:Key="Slider" Color="#449dc4" />
+
 </ResourceDictionary>
