--- a/Themes/CobaltTheme.xaml
+++ b/Themes/CobaltTheme.xaml
@@ -1,9 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#0853E8" />
-    <SolidColorBrush x:Key="Mid" Color="#0747C6" />
-    <SolidColorBrush x:Key="Dark" Color="#163676" />
+
+    <SolidColorBrush x:Key="Light" Color="#396cd1" />
+    <SolidColorBrush x:Key="LightMouse" Color="#0747c6" />
+
+    <SolidColorBrush x:Key="Mid" Color="#0747c6" />
+    <SolidColorBrush x:Key="MidMouse" Color="#06399e" />
+
+    <SolidColorBrush x:Key="Dark" Color="#05328b" />
+    <SolidColorBrush x:Key="DarkMouse" Color="#042463" />
+
     <SolidColorBrush x:Key="Foreground" Color="White" />
     <SolidColorBrush x:Key="Background" Color="#252525" />
+    
     <SolidColorBrush x:Key="Slider" Color="White" />
-    <SolidColorBrush x:Key="Tab" Color="White" />
 </ResourceDictionary>
