--- a/Themes/CrimsonTheme.xaml
+++ b/Themes/CrimsonTheme.xaml
@@ -1,10 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light"  Color="#A1082B"/>
-    <SolidColorBrush x:Key="Mid"  Color="#890725"/>
-    <SolidColorBrush x:Key="Dark"  Color= "#571625"/>
+
+    <SolidColorBrush x:Key="Light" Color="#a13951" />
+    <SolidColorBrush x:Key="LightMouse" Color="#890725" />
+
+    <SolidColorBrush x:Key="Mid" Color="#890725" />
+    <SolidColorBrush x:Key="MidMouse" Color="#6e061e" />
+
+    <SolidColorBrush x:Key="Dark" Color="#60051a" />
+    <SolidColorBrush x:Key="DarkMouse" Color="#450413" />
+
+
     <SolidColorBrush x:Key="Foreground" Color="White" />
     <SolidColorBrush x:Key="Background" Color="#252525" />
+    
     <SolidColorBrush x:Key="Slider" Color="White" />
-    <SolidColorBrush x:Key="Tab" Color="White" />
+    
 </ResourceDictionary>
