--- a/Themes/MauveLightTheme.xaml
+++ b/Themes/MauveLightTheme.xaml
@@ -1,9 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#806A94" />
+
+    <SolidColorBrush x:Key="Light" Color="#847691" />
+    <SolidColorBrush x:Key="LightMouse" Color="#655475" />
+
     <SolidColorBrush x:Key="Mid" Color="#655475" />
-    <SolidColorBrush x:Key="Dark" Color="#453C4D" />
+    <SolidColorBrush x:Key="MidMouse" Color="#51435e" />
+
+    <SolidColorBrush x:Key="Dark" Color="#473b52" />
+    <SolidColorBrush x:Key="DarkMouse" Color="#332a3b" />
+
+
     <SolidColorBrush x:Key="Foreground" Color="Black" />
     <SolidColorBrush x:Key="Background" Color="White" />
-    <SolidColorBrush x:Key="Slider" Color="#655475" />
-    <SolidColorBrush x:Key="Tab" Color="White" />
+
+    <SolidColorBrush x:Key="Slider" Color="#847691" />
+    
 </ResourceDictionary>
