--- a/Themes/SteelLightTheme.xaml
+++ b/Themes/SteelLightTheme.xaml
@@ -1,9 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#6C7D8F" />
+
+    <SolidColorBrush x:Key="Light" Color="#79848f" />
+    <SolidColorBrush x:Key="LightMouse" Color="#576573" />
+
     <SolidColorBrush x:Key="Mid" Color="#576573" />
-    <SolidColorBrush x:Key="Dark" Color="#3E454C" />
+    <SolidColorBrush x:Key="MidMouse" Color="#46515c" />
+
+    <SolidColorBrush x:Key="Dark" Color="#3d4751" />
+    <SolidColorBrush x:Key="DarkMouse" Color="#2c333a" />
+
+
     <SolidColorBrush x:Key="Foreground" Color="Black" />
     <SolidColorBrush x:Key="Background" Color="White" />
-    <SolidColorBrush x:Key="Slider" Color="#576573"/>
-    <SolidColorBrush x:Key="Tab" Color="White" />
+
+    <SolidColorBrush x:Key="Slider" Color="#79848f"/>
+    
 </ResourceDictionary>
