--- a/Themes/TealLightTheme.xaml
+++ b/Themes/TealLightTheme.xaml
@@ -1,9 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#08A3A0" />
-    <SolidColorBrush x:Key="Mid" Color="#07908E" />
-    <SolidColorBrush x:Key="Dark" Color="#165A5A" />
+
+    <SolidColorBrush x:Key="Light" Color="#39a6a5" />
+    <SolidColorBrush x:Key="LightMouse" Color="#07908e" />
+
+    <SolidColorBrush x:Key="Mid" Color="#07908e" />
+    <SolidColorBrush x:Key="MidMouse" Color="#067372" />
+
+    <SolidColorBrush x:Key="Dark" Color="#056563" />
+    <SolidColorBrush x:Key="DarkMouse" Color="#044847" />
+
+
     <SolidColorBrush x:Key="Foreground" Color="Black" />
     <SolidColorBrush x:Key="Background" Color="White" />
-    <SolidColorBrush x:Key="Slider" Color="#07908E"/>
-    <SolidColorBrush x:Key="Tab" Color="White" />
+
+    <SolidColorBrush x:Key="Slider" Color="#39a6a5"/>
+    
 </ResourceDictionary>
