--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -114,8 +114,36 @@
 
 
 
-            <!--  button style for other buttons curved and opacity  -->
+            <!--  button style for del refresh EQ buttons  -->
+            <Style x:Key="dMASSbuttonDelRefresh" TargetType="{x:Type Button}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border
+                                Background="{TemplateBinding Background}"
+                                BorderThickness="0"
+                                CornerRadius="4">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            </Border>
 
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Background" Value="{DynamicResource DarkMouse}" />
+                    </Trigger>
+                    <Trigger Property="IsMouseOver" Value="False">
+                        <Setter Property="Background" Value="{DynamicResource Dark}" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+
+
+
+
+
+            <!--  button style for other buttons curved and opacity  -->
             <Style x:Key="dMASSbutton" TargetType="{x:Type Button}">
                 <Setter Property="Template">
                     <Setter.Value>
@@ -139,6 +167,7 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
+
 
 
 
@@ -1372,6 +1401,7 @@
                                 Expander.Expanded="EQ_Expanded"
                                 FontFamily="roboto"
                                 FontSize="16"
+                                IsExpanded="False"
                                 MouseDown="EQ_MouseDown">
                                 <Expander.Header>
                                     <StackPanel Margin="-4,-2,0,0" Orientation="Horizontal">
@@ -2042,6 +2072,32 @@
                                             LP
                                         </TextBlock>
                                     </Border>
+
+                                    <!--  delete eq  -->
+                                    <Border
+                                        Grid.Row="0"
+                                        Grid.Column="5"
+                                        Margin="6,4.5,6,4.5">
+                                        <Button x:Name="RefreshEQ" Style="{StaticResource dMASSbuttonDelRefresh}"
+                                        	Click="DeleteEQ_Click">
+                                            <Image
+                                                Height="23"
+                                                Margin="-1,-0.5,0,0"
+                                                Source="Resources\delete50x50.png" />
+                                        </Button>
+                                    </Border>
+
+                                    <!--  refresh eq  -->
+                                    <Border
+                                        Grid.Row="0"
+                                        Grid.Column="7"
+                                        Margin="6,4.5,6,4.5">
+                                        <Button x:Name="DeleteEQ" Style="{StaticResource dMASSbuttonDelRefresh}"
+                                        	Click="InitEQ_Click">
+                                            <Image Height="26" Source="Resources\refresh50X50.png" />
+                                        </Button>
+                                    </Border>
+
 
                                 </Grid>
                             </Expander>
