--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -200,6 +200,48 @@
                 </Style.Triggers>
             </Style>
 
+            
+            
+
+            
+            <!--  button style for toggle button for Full throttle  -->
+            <Style x:Key="dMASSbuttonToggleThrottle" TargetType="{x:Type ToggleButton}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type ToggleButton}">
+                            <Border
+                                Background="{TemplateBinding Background}"
+                                BorderThickness="0"
+                                CornerRadius="5">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            </Border>
+
+
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Background" Value="{DynamicResource MidMouse}" />
+                    </Trigger>
+                    <Trigger Property="IsMouseOver" Value="False">
+                        <Setter Property="Background" Value="{DynamicResource Mid}" />
+                    </Trigger>
+                    <Trigger Property="IsChecked" Value="True">
+                        <Setter Property="Background" Value="#BF161D" />
+                    </Trigger>
+
+                    <MultiTrigger>
+                        <MultiTrigger.Conditions>
+                            <Condition Property="IsMouseOver" Value="true" />
+                            <Condition Property="IsChecked" Value="true" />
+                        </MultiTrigger.Conditions>
+                        <Setter Property="Background" Value="#991217" />
+                    </MultiTrigger>
+
+                </Style.Triggers>
+            </Style>
+
 
 
 
@@ -1407,7 +1449,7 @@
                                 Expander.Expanded="EQ_Expanded"
                                 FontFamily="roboto"
                                 FontSize="16"
-                                IsExpanded="True"
+                                IsExpanded="False"
                                 MouseDown="EQ_MouseDown">
                                 <Expander.Header>
                                     <StackPanel Margin="-4,-2,0,0" Orientation="Horizontal">
@@ -2121,7 +2163,7 @@
                                 Expander.Expanded="TC_Expanded"
                                 FontFamily="roboto"
                                 FontSize="16"
-                                IsExpanded="True"
+                                IsExpanded="False"
                                 MouseDown="ExpanderTone_MouseDown">
                                 <Expander.Header>
                                     <StackPanel Margin="-4,-2,0,0" Orientation="Horizontal">
@@ -2194,12 +2236,13 @@
                                         Grid.Row="9"
                                         Grid.Column="0"
                                         Margin="3,0,3,10">
-                                        <Button
+                                        <ToggleButton
                                             x:Name="ThrottleLoadSwitch"
                                             Click="ThrottleLoadSwitch_Click"
-                                            Style="{StaticResource dMASSbuttonDelRefresh}">
+                                            IsChecked="False"
+                                            Style="{StaticResource dMASSbuttonToggleThrottle}">
                                             <Image Height="24" Source="Resources\throttle50X50.png" />
-                                        </Button>
+                                        </ToggleButton>
                                     </Border>
 
                                     <Border
@@ -3029,7 +3072,7 @@
                             BorderThickness="2"
                             FontFamily="roboto"
                             FontSize="14"
-                            IsExpanded="True"
+                            IsExpanded="False"
                             MouseDown="ExpanderSuspension_MouseDown">
                             <Expander.Header>
                                 <StackPanel Margin="-4,-2,0,0" Orientation="Horizontal">
@@ -3213,7 +3256,7 @@
                                 BorderThickness="2"
                                 FontFamily="roboto"
                                 FontSize="14"
-                                IsExpanded="True"
+                                IsExpanded="False"
                                 MouseDown="ExpanderGforce_MouseDown">
                                 <Expander.Header>
                                     <StackPanel Margin="-6,-2,0,0" Orientation="Horizontal">
