--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -1,9 +1,9 @@
 <UserControl
-    x:Class="sierses.Sim.SettingsControl"
+    x:Class="blekenbleu.Haptic.SettingsControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:sierses.Sim"
+    xmlns:local="clr-namespace:blekenbleu.Haptic"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:styles="clr-namespace:SimHub.Plugins.Styles;assembly=SimHub.Plugins"
     d:DataContext="{d:DesignInstance}"
@@ -27,7 +27,7 @@
         <ResourceDictionary>
             <!--  needed for Designer debugging  -->
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/sierses.Sim;component/Themes/SteelTheme.xaml" />
+                <ResourceDictionary Source="/blekenbleu.Haptic;component/Themes/SteelTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!--  gets overridden by ChangeTheme()  -->
 
