--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -1,13 +1,14 @@
 <UserControl
 	x:Class="sierses.Sim.SettingsControl"
+	xmlns:local="clr-namespace:sierses.Sim"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:sierses.Sim"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:styles="clr-namespace:SimHub.Plugins.Styles;assembly=SimHub.Plugins"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	d:DataContext="{d:DesignInstance}"
-	mc:Ignorable="d">
+	mc:Ignorable="d"
+	xmlns:styles="clr-namespace:SimHub.Plugins.Styles;assembly=SimHub.Plugins"
+>
 
 	<UserControl.Resources>
 
@@ -313,11 +314,6 @@
 				</Style.Resources>
 			</Style>
 
-
-
-
-
-
 			<!--  lock toggle button
 			<Style x:Name="LockToggle" TargetType="{x:Type ToggleButton}">
 				<Setter Property="Content">
@@ -335,12 +331,7 @@
 						</Setter>
 					</Trigger>
 				</Style.Triggers>
-
 			</Style>-->
-
-
-
-
 
 			<!--  combobox styling start  -->
 			<ControlTemplate x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
@@ -386,9 +377,7 @@
 						<Setter TargetName="Arrow" Property="Fill" Value="{DynamicResource Foreground}" />
 					</Trigger>
 				</ControlTemplate.Triggers>
-
 			</ControlTemplate>
-
 			<ControlTemplate x:Key="ComboBoxTextBox" TargetType="{x:Type TextBox}">
 				<Border
 					x:Name="PART_ContentHost"
@@ -487,8 +476,6 @@
 				<Style.Triggers />
 			</Style>
 
-
-
 			<!--  SimpleStyles: ComboBoxItem  -->
 			<Style x:Key="{x:Type ComboBoxItem}" TargetType="{x:Type ComboBoxItem}">
 				<Setter Property="SnapsToDevicePixels" Value="true" />
@@ -517,10 +504,6 @@
 			</Style>
 			<!--  combobox styling end  -->
 
-
-
-
-
 			<!--  Button corner radius and styling  -->
 			<Style TargetType="{x:Type Button}">
 				<Style.Resources>
@@ -530,10 +513,6 @@
 					</Style>
 				</Style.Resources>
 			</Style>
-
-
-
-
 
 			<!--  slider style !!!NEW!!! horizontal and vertical  -->
 			<Style x:Key="Style_SliderLeftButton" TargetType="{x:Type RepeatButton}">
@@ -591,7 +570,6 @@
 										Stroke="{DynamicResource Dark}"
 										StrokeThickness="30" />
 								</Grid>
-
 								<!--  text label  -->
 								<TextBlock
 									x:Name="ThumbdMASSlabelnew"
@@ -612,9 +590,7 @@
 									<Setter TargetName="ThumbdMASSlabelnew" Property="Opacity" Value="0.9" />
 								</Trigger>
 							</ControlTemplate.Triggers>
-
 						</ControlTemplate>
-
 					</Setter.Value>
 				</Setter>
 			</Style>
@@ -646,7 +622,6 @@
 						CornerRadius="2" />
 
 					<Track x:Name="PART_Track" Grid.Row="1">
-
 						<Track.DecreaseRepeatButton>
 							<RepeatButton Command="Slider.DecreaseLarge" Style="{StaticResource Style_SliderLeftButton}" />
 						</Track.DecreaseRepeatButton>
@@ -712,7 +687,6 @@
 						CornerRadius="2" />
 
 					<Track x:Name="PART_Track" Grid.Column="1">
-
 						<Track.DecreaseRepeatButton>
 							<RepeatButton Command="Slider.DecreaseLarge" Style="{StaticResource Style_SliderLeftButton}" />
 						</Track.DecreaseRepeatButton>
@@ -761,10 +735,6 @@
 					</Trigger>
 				</Style.Triggers>
 			</Style>
-
-
-
-
 
 			<!--  corner radius expander start  -->
 			<Style x:Key="ExpanderToggleButton" TargetType="{x:Type ToggleButton}">
@@ -862,10 +832,6 @@
 		</ResourceDictionary>
 	</UserControl.Resources>
 	<!--  end of resources  -->
-
-
-
-
 
 	<!--  start  -->
 	<Border
@@ -1022,7 +988,6 @@
 									VerticalAlignment="Center"
 									Foreground="{DynamicResource Foreground}"
 									TextAlignment="Right"><Run Text="ID" /></TextBlock>
-
 								<TextBox
 									x:Name="CarID"
 									Grid.Row="4"
@@ -1056,8 +1021,6 @@
 										Foreground="{DynamicResource Foreground}"
 										Text=" )" />
 								</StackPanel>
-
-
 								<TextBox
 									x:Name="FiringOrder"
 									Grid.Row="6"
@@ -1090,7 +1053,6 @@
 									LostFocus="CarClass_LostFocus"
 									Style="{StaticResource EngineTBstyle}"
 									Text="{Binding S.Category}" />
-
 								<TextBlock
 									x:Name="EngEHPLabel"
 									Grid.Row="7"
@@ -1122,7 +1084,6 @@
 									HorizontalAlignment="Center"
 									Foreground="{DynamicResource Foreground}"
 									TextAlignment="Center"><Run Text="Idle" /></TextBlock>
-
 								<TextBlock
 									x:Name="EngRedlineLabel"
 									Grid.Row="9"
@@ -1131,7 +1092,6 @@
 									Margin="0,3"
 									Foreground="{DynamicResource Foreground}"
 									TextAlignment="Center"><Run Text="Redline" /></TextBlock>
-
 								<TextBlock
 									x:Name="EngMaxLabel"
 									Grid.Row="9"
@@ -1140,7 +1100,6 @@
 									Margin="0,3"
 									Foreground="{DynamicResource Foreground}"
 									TextAlignment="Center"><Run Text="Max" /></TextBlock>
-
 								<TextBlock
 									x:Name="EngHPLabel"
 									Grid.Row="9"
@@ -1151,7 +1110,6 @@
 									VerticalAlignment="Center"
 									Foreground="{DynamicResource Foreground}"
 									TextAlignment="Center"><Run Text="HP" /></TextBlock>
-
 								<TextBlock
 									x:Name="EngNMLabel"
 									Grid.Row="9"
@@ -1184,7 +1142,6 @@
 									LostFocus="Redline_LostFocus"
 									Style="{StaticResource EngineTBstyle}"
 									Text="{Binding S.Redline}" />
-
 								<TextBox
 									x:Name="MaxRPM"
 									Grid.Row="10"
@@ -1195,7 +1152,6 @@
 									LostFocus="MaxRPM_LostFocus"
 									Style="{StaticResource EngineTBstyle}"
 									Text="{Binding S.MaxRPM}" />
-
 								<TextBox
 									x:Name="MaxPowerHP"
 									Grid.Row="10"
@@ -1206,7 +1162,6 @@
 									LostFocus="MaxPowerHP_LostFocus"
 									Style="{StaticResource EngineTBstyle}"
 									Text="{Binding S.MaxPower}" />
-
 								<TextBox
 									x:Name="MaxTorqueNM"
 									Grid.Row="10"
@@ -1258,7 +1213,6 @@
 									VerticalAlignment="Center"
 									Foreground="{DynamicResource Foreground}"
 									TextAlignment="Center"><Run Text="Drivetrain" /></TextBlock>
-
 								<TextBlock
 									x:Name="EngLocationLabel"
 									Grid.Row="11"
@@ -1269,7 +1223,6 @@
 									VerticalAlignment="Center"
 									Foreground="{DynamicResource Foreground}"
 									TextAlignment="Center"><Run Text="Location" /></TextBlock>
-
 
 								<!--  Engine config/cylinders/drivetrain comboboxes  -->
 								<!--  engine config  -->
@@ -1487,7 +1440,6 @@
 										<RowDefinition Height="40" />
 										<RowDefinition Height="32" />
 									</Grid.RowDefinitions>
-
 									<!--  switch eq  -->
 									<RepeatButton
 										x:Name="EQswitch_increment"
@@ -1503,7 +1455,6 @@
 										Interval="1"
 										Style="{StaticResource EQbuttonDark}">
 										<StackPanel Orientation="Horizontal">
-
 											<TextBlock
 												Margin="0,0,15,0"
 												VerticalAlignment="Center"
@@ -1551,7 +1502,6 @@
 												Text="PREV" />
 										</StackPanel>
 									</RepeatButton>
-
 									<!--  eq slider0  -->
 									<RepeatButton
 										x:Name="EQ0_increment"
@@ -1614,7 +1564,6 @@
 											HP
 										</TextBlock>
 									</Border>
-
 									<!--  eq slider1  -->
 									<RepeatButton
 										x:Name="EQ1_increment"
@@ -1740,7 +1689,6 @@
 											2
 										</TextBlock>
 									</Border>
-
 									<!--  eq slider3  -->
 									<RepeatButton
 										x:Name="EQ3_increment"
@@ -1803,7 +1751,6 @@
 											3
 										</TextBlock>
 									</Border>
-
 									<!--  eq slider4  -->
 									<RepeatButton
 										x:Name="EQ4_increment"
@@ -1866,7 +1813,6 @@
 											4
 										</TextBlock>
 									</Border>
-
 									<!--  eq slider5  -->
 									<RepeatButton
 										x:Name="EQ5_increment"
@@ -1929,7 +1875,6 @@
 											5
 										</TextBlock>
 									</Border>
-
 									<!--  eq slider6  -->
 									<RepeatButton
 										x:Name="EQ6_increment"
@@ -1992,7 +1937,6 @@
 											6
 										</TextBlock>
 									</Border>
-
 									<!--  eq slider7  -->
 									<RepeatButton
 										x:Name="EQ7_increment"
@@ -2055,7 +1999,6 @@
 											7
 										</TextBlock>
 									</Border>
-
 									<!--  eq slider8  -->
 									<RepeatButton
 										x:Name="EQ8_increment"
@@ -2118,7 +2061,6 @@
 											LP
 										</TextBlock>
 									</Border>
-
 									<!--  delete eq  -->
 									<Border
 										Grid.Row="0"
@@ -2134,7 +2076,6 @@
 												Source="Resources\delete50x50.png" />
 										</Button>
 									</Border>
-
 									<!--  refresh eq  -->
 									<Border
 										Grid.Row="0"
@@ -2147,12 +2088,9 @@
 											<Image Height="26" Source="Resources\refresh50X50.png" />
 										</Button>
 									</Border>
-
-
 								</Grid>
 							</Expander>
 						</StackPanel>
-
 						<!--  tone calibration expander  -->
 						<StackPanel>
 							<Expander
@@ -2210,7 +2148,6 @@
 										<RowDefinition Height="32" />
 										<RowDefinition Height="32" />
 									</Grid.RowDefinitions>
-
 									<!--  modulation/rpm/fund  -->
 									<Border
 										Grid.Row="8"
@@ -2227,7 +2164,6 @@
 											Mod
 										</TextBlock>
 									</Border>
-
 									<!--  throttle load button  -->
 									<Border
 										Grid.Row="9"
@@ -2241,7 +2177,6 @@
 											<Image Height="24" Source="Resources\throttle50X50.png" />
 										</ToggleButton>
 									</Border>
-
 									<!--  ratio toggle button  -->
 									<Border
 										Grid.Row="9"
@@ -2256,7 +2191,6 @@
 											Ratio
 										</ToggleButton>
 									</Border>
-
 									<Border
 										Grid.Row="8"
 										Grid.Column="1"
@@ -2272,7 +2206,6 @@
 											RPM
 										</TextBlock>
 									</Border>
-
 									<Border
 										Grid.Row="8"
 										Grid.Column="2"
@@ -2288,7 +2221,6 @@
 											Fund
 										</TextBlock>
 									</Border>
-
 									<Border
 										Grid.Row="7"
 										Grid.Column="0"
@@ -2305,9 +2237,6 @@
 											Peak
 										</TextBlock>
 									</Border>
-
-
-
 									<!--  H1  -->
 									<RepeatButton
 										x:Name="H1_increment"
@@ -2371,7 +2300,6 @@
 											H3
 										</TextBlock>
 									</Border>
-
 									<!--  H2  -->
 									<RepeatButton
 										x:Name="H2_increment"
@@ -2435,8 +2363,6 @@
 											H4
 										</TextBlock>
 									</Border>
-
-
 									<!--  H3  -->
 									<RepeatButton
 										x:Name="H3_increment"
@@ -2501,7 +2427,6 @@
 											H5
 										</TextBlock>
 									</Border>
-
 									<!--  H4  -->
 									<RepeatButton
 										x:Name="H4_increment"
@@ -2566,7 +2491,6 @@
 											H6
 										</TextBlock>
 									</Border>
-
 									<!--  H5  -->
 									<RepeatButton
 										x:Name="H5_increment"
@@ -2631,7 +2555,6 @@
 											H7
 										</TextBlock>
 									</Border>
-
 									<!--  H6  -->
 									<RepeatButton
 										x:Name="H6_increment"
@@ -2696,9 +2619,7 @@
 											H8
 										</TextBlock>
 									</Border>
-
 									<!--  modulation and factor sliders  -->
-
 									<!--  Modulation  -->
 									<Slider
 										x:Name="F2"
@@ -2713,7 +2634,6 @@
 										TickFrequency="1"
 										ValueChanged="HSlider"
 										Value="50" />
-
 									<!--  F1  -->
 									<Slider
 										x:Name="F0"
@@ -2728,9 +2648,6 @@
 										TickFrequency="7"
 										ValueChanged="HSlider"
 										Value="500" />
-
-
-
 									<!--  F2  -->
 									<Slider
 										x:Name="F1"
@@ -2745,7 +2662,6 @@
 										TickFrequency="7"
 										ValueChanged="HSlider"
 										Value="500" />
-
 									<!--  H1  -->
 									<Slider
 										x:Name="H1_factor"
@@ -2760,7 +2676,6 @@
 										TickFrequency="1"
 										ValueChanged="HSlider"
 										Value="5" />
-
 									<!--  H2  -->
 									<Slider
 										x:Name="H2_factor"
@@ -2775,8 +2690,6 @@
 										TickFrequency="1"
 										ValueChanged="HSlider"
 										Value="6" />
-
-
 									<!--  H3  -->
 									<Slider
 										x:Name="H3_factor"
@@ -2791,7 +2704,6 @@
 										TickFrequency="1"
 										ValueChanged="HSlider"
 										Value="7" />
-
 									<!--  H4  -->
 									<Slider
 										x:Name="H4_factor"
@@ -2806,7 +2718,6 @@
 										TickFrequency="1"
 										ValueChanged="HSlider"
 										Value="8" />
-
 									<!--  H5  -->
 									<Slider
 										x:Name="H5_factor"
@@ -2821,7 +2732,6 @@
 										TickFrequency="1"
 										ValueChanged="HSlider"
 										Value="9" />
-
 									<!--  H6  -->
 									<Slider
 										x:Name="H6_factor"
@@ -2838,9 +2748,7 @@
 										Value="10" />
 
 									<!--  gain and factor headers)  -->
-
 									<!--  F1  -->
-
 									<!-- F1, F2 fixed factors - 1
 										<Border
 											Grid.Row="3"
@@ -2857,9 +2765,7 @@
 												Factor
 											</TextBlock>
 										</Border>	-->
-
 									<!--  F2  -->
-
 									<!-- F1, F2 fixed factors - 1
 										<Border
 											Grid.Row="3"
@@ -2876,7 +2782,6 @@
 												Factor
 											</TextBlock>
 										</Border>	-->
-
 									<!--  H1  -->
 									<Border
 										Grid.Row="3"
@@ -2908,7 +2813,6 @@
 											Factor
 										</TextBlock>
 									</Border>
-
 									<!--  H2  -->
 									<Border
 										Grid.Row="3"
@@ -2940,7 +2844,6 @@
 											Factor
 										</TextBlock>
 									</Border>
-
 									<!--  H3  -->
 									<Border
 										Grid.Row="3"
@@ -2972,7 +2875,6 @@
 											Factor
 										</TextBlock>
 									</Border>
-
 									<!--  H4  -->
 									<Border
 										Grid.Row="8"
@@ -3004,7 +2906,6 @@
 											Factor
 										</TextBlock>
 									</Border>
-
 									<!--  H5  -->
 									<Border
 										Grid.Row="8"
@@ -3036,7 +2937,6 @@
 											Factor
 										</TextBlock>
 									</Border>
-
 									<!--  H6  -->
 									<Border
 										Grid.Row="8"
@@ -3068,13 +2968,10 @@
 											Factor
 										</TextBlock>
 									</Border>
-
 								</Grid>
 							</Expander>
 						</StackPanel>
 						<!--  end of tone calibration container  -->
-
-
 
 						<!--  EXPANDER MIDI  -->
 						<Expander
@@ -3117,8 +3014,6 @@
 									<RowDefinition Height="30" />
 									<RowDefinition Height="*" />
 								</Grid.RowDefinitions>
-
-
 								<!--  throttle learn  -->
 								<TextBlock
 									Grid.Row="0"
@@ -3152,7 +3047,6 @@
 									Style="{StaticResource dMASSbutton}">
 									Learn
 								</Button>
-
 								<!--  idle learn  -->
 								<TextBlock
 									Grid.Row="0"
@@ -3186,7 +3080,6 @@
 									Style="{StaticResource dMASSbutton}">
 									Learn
 								</Button>
-
 								<!--  redline learn  -->
 								<TextBlock
 									Grid.Row="0"
@@ -3220,7 +3113,6 @@
 									Style="{StaticResource dMASSbutton}">
 									Learn
 								</Button>
-
 								<!--  config learn  -->
 								<TextBlock
 									Grid.Row="0"
@@ -3254,7 +3146,6 @@
 									Style="{StaticResource dMASSbutton}">
 									Learn
 								</Button>
-
 								<!--  cylinders learn  -->
 								<TextBlock
 									Grid.Row="0"
@@ -3288,7 +3179,6 @@
 									Style="{StaticResource dMASSbutton}">
 									Learn
 								</Button>
-
 								<!--  rpm learn  -->
 								<TextBlock
 									Grid.Row="0"
@@ -3322,11 +3212,8 @@
 									Style="{StaticResource dMASSbutton}">
 									Learn
 								</Button>
-
 							</Grid>
 						</Expander>
-
-
 
 						<!--  Suspension Multi container start  -->
 						<!--  EXPANDER Suspension  -->
@@ -3355,7 +3242,7 @@
 								</StackPanel>
 							</Expander.Header>
 
-							<Grid Margin="-12,0,0,0" HorizontalAlignment="Center">
+		<Grid Margin="-12,0,0,0" HorizontalAlignment="Center">
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="100" />
 									<ColumnDefinition Width="100" />
@@ -3412,9 +3299,7 @@
 									Game Gamma
 								</TextBlock>
 
-
 								<!--  Suspension sliders  -->
-
 								<!--  all gain  -->
 								<Slider
 									x:Name="SuspensionMultAll"
@@ -3475,7 +3360,6 @@
 									Minimum="0"
 									TickFrequency="0.1"
 									Value="{Binding D.SuspensionGamma}" />
-
 								<!--  reset button  -->
 								<Button
 									x:Name="ButtonResetSuspension"
@@ -3497,14 +3381,8 @@
 										FontSize="16"
 										Text="Reset" />
 								</Button>
-
-
 							</Grid>
 						</Expander>
-
-
-
-
 
 						<!--  gforce container start  -->
 						<StackPanel>
@@ -3955,7 +3833,6 @@
 					</StatusBarItem>
 				</StatusBar>
 			</Grid>
-
 		</Grid>
 	</Border>
 </UserControl>
